# dbt-faker

./: .gitignore  README.md  pyproject.toml  test.py
.github/workflows/: build_fake_data.yml
dbt_faker/: main.py
dbt_faker/db/: base.py  fields.py  orms.py
dbt_faker/etl/: __init__.py  common.py  tpch.py
dbt_faker/factories/: common.py  tpch.py
dbt_faker/orms/: tpch.py
dbt_faker/utils/: singer_taps.py
