[project]
name = "dbt-faker"
version = "0.1.0"
description = "A tool for generating fake data for dbt projects"
requires-python = ">=3.9"
dependencies = [
    "factory-boy>=3.2.1",
    "snowflake-sqlalchemy[pandas]~=1.4",
    "PyGithub>=1.55"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dbt_faker"]

[tool.uv]
dev-dependencies = [
    "black>=22.3.0",
    "pre-commit>=2.19.0",
    "isort>=5.10.1",
    "mypy>=0.961",
    "flake8>=4.0.1",
    "pytest>=7.1.2",
    "ipython>=8.4.0",
    "coverage>=6.4.1",
    "pytest-cov>=3.0.0"
] 